  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.121 2007/09/04 11:08:03 stream Exp $
==========================================================================

2.9000
------
2.9015-503  imp: cellbe: Slightly faster SPE OGR core
            fix: linux: Working fix for the race condition alluded to in the
                        changelog for v2.9015-502
            imp: x86: Faster OGR MMX cores (1-3%, depending on CPU)

2.9015-502  new: cellbe: Added SPE OGR cores
            fix: linux: Fix race condition in heavily multithreaded
                        scenarios causing the first cruncher to randomly
                        stop running until client is restarted.
            chg: x86: SGP-3 is default RC5-72 core for older P4's (#4009)
            imp: x86: A little faster and stable speed of DG-3 and SGP-3 cores.

2.9014-501  new: cellbe: New platform, PlayStation 3/Cell BE

2.9013-500  imp: x86: Faster RC5-72 GO-2 core (#3265)
            chg: x86: GO-2 core is now the default selection for P4
            chg: x86: OGR core selection for P4 (#3988 and others)
            chg: all: default work precedence is now OGR-P2,RC5-72
            chg: all: default buffer level checking set to 4

2.9013-499  imp: x86: Faster OGR MMX cores (1-3%, depending on CPU)

2.9013-498  new: x86: Added new AMD optimized OGR core, selected for AMD CPUs
            new: x86: Detect Intel Core 1/2 (#3939, #3969)
            new: x86: Detect 65um Intel Netburst (#3972)
            new: x86: Detect Via C7 (#3962)
            chg: x86: P4 naming (#3862)
            chg: x86: AMD K8/Opteron Naming (#3912, #3967)