@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.121 2007/09/04 11:08:03 stream Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.122 2007/09/07 14:04:12 stream Exp $
 ==========================================================================
 
 2.9000
@@ -32,6 +32,7 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.121 2007/09/04 11:08:03 stream Exp
             fix: linux: Working fix for the race condition alluded to in the
                         changelog for v2.9015-502
             imp: x86: Faster OGR MMX cores (1-3%, depending on CPU)
+            chg: x86: OGR core selection for P4 (updated cores)
 
 2.9015-502  new: cellbe: Added SPE OGR cores
             fix: linux: Fix race condition in heavily multithreaded
